--- a/src/app/pages/inapp-marketing/banner-sorting/banner-sorting.component.html
+++ b/src/app/pages/inapp-marketing/banner-sorting/banner-sorting.component.html
@@ -1,15 +1,51 @@
+<!--a draggable element-->
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Spanduk Online'">
-    <button [routerLink]="['/advertisement','banner', 'sorting']" mat-raised-button type="button">
-      <mat-icon>sort</mat-icon> PENGATURAN URUTAN
-    </button>
-    <button style="width: 170px" [routerLink]="['/advertisement','banner', 'create']" mat-raised-button type="button">
-      <mat-icon>add</mat-icon> BUAT
+  <page-content-header [contentTitle]="'Pengaturan Urutan In-App Banner'">
+    <button style="width: 170px" (click)="submit()" mat-raised-button type="button">
+      <mat-icon>add</mat-icon> SIMPAN
     </button>
   </page-content-header>
   <!-- / HEADER -->
 
+  <div class="content p-24" *ngIf="!onLoad">
+    <div class="table-wrapper">
+      <!-- <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
+      </div> -->
+
+
+      <div fxLayout="row" id="dz-wrapper" dndDropzone [dndHorizontal]="true" dndEffectAllowed="copyMove"
+        (dndDrop)="onDrop($event, sortedBanner)">
+        <div class="dz-placeholder" dndPlaceholderRef></div>
+        <!-- [ngStyle]="{ 'background-image': 'url(' + item.image_url + ')' }" -->
+        <div fxLayout="column wrap" class="banner-dropzone" [dndDraggable]="item" (dndMoved)="onDragged(item, sortedBanner, 'move')"
+          *ngFor="let item of sortedBanner; let i = index" dndEffectAllowed="move">
+          <div class="item">
+            <img src="{{item.image_url}}" alt="{{item.name}}" width="200px" height="100px">
+            <div class="banner-title" fxLayout="row wrap" fxLayoutAlign="center center">
+              {{item.name}}
+            </div>
+          </div>
+          <div fxLayout="row wrap" fxLayoutAlign="center center">
+            <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="remove(item, i)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+
+        </div>
+        <div style="height: 100px !important; margin-right: 10px !important;" class="dz-add" *ngIf="sortedBanner.length < MAX_SLOT_BANNER">
+          <div fxLayout="column wrap" class="banner-dropzone" fxLayoutAlign="center center">
+            <mat-icon fxFlex class="ic-add" [inline]="true">add</mat-icon>
+            <h3 style="margin-block-start: 0.1em;margin-block-end: 0.1em;">Maks {{MAX_SLOT_BANNER}} Banner</h3>
+          </div>
+        </div>
+        <!-- <div class="banner-dropzone dz-add" fxLayout="column wrap" flexLayoutAlign="center center" style="padding: auto;">
+        </div> -->
+      </div>
+    </div>
+  </div>
+
+  <!-- TABLE -->
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
@@ -26,28 +62,30 @@
         [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total"
         [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
         (sort)="onSort($event)">
-
         <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
-          <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+          <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
             let-selectFn="selectFn">
             <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-          </ng-template>
+          </ng-template> -->
 
           <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected"
-            let-onCheckboxChangeFn="onCheckboxChangeFn">
-            <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
+            let-onCheckboxChangeFn="onCheckboxChangeFn" let-row="row">
+            <mat-checkbox [checked]="isSelected || checkSelected(row)"
+              (change)="onSelect($event, row, sortedBanner, onCheckboxChangeFn)"></mat-checkbox>
           </ng-template>
         </ngx-datatable-column>
 
         <ngx-datatable-column name="ID" prop="id">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" (click)="directDetail(row)">{{row.id}}</span>
+            <span class="row-name">{{row.id}}</span>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="140" name="" [canAutoResize]="false" [sortable]="true">
+        <ngx-datatable-column [width]="140" name="" [canAutoResize]="false" [sortable]="true"
+          dndEffectAllowed="copyMove">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="name-container pl-8 pt-8 pb-8 pr-0">
+            <div class="name-container pl-8 pt-8 pb-8 pr-0" [dndDraggable]="row"
+              (dndMoved)="onDragged(row, rows, 'move')" (dndCopied)="onDragged(row, rows, 'copy')">
               <img class="banner-image" *ngIf="row.image_url" [src]="row.image_url">
               <img class="banner-image" *ngIf="!row.image_url"
                 [src]="'https://i2.wp.com/www.solidcolore.com/3840/d3d3d3_background.jpg?ssl=1'">
@@ -57,7 +95,7 @@
 
         <ngx-datatable-column name="Nama" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" (click)="directDetail(row)">{{row.name}}</span>
+            <span class="row-name">{{row.name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
@@ -86,25 +124,8 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="button-row" style="margin-left: -10px">
-              <button mat-icon-button *ngIf="!permission?.ubah" color="" matTooltip="Lihat Spanduk"
-                (click)="directDetail(row)">
-                <mat-icon class="secondary-text">assignment</mat-icon>
-              </button>
-              <button mat-icon-button *ngIf="permission?.ubah" color="" matTooltip="Ubah Spanduk"
-                (click)="directEdit(row)">
-                <mat-icon class="secondary-text">edit</mat-icon>
-              </button>
-              <button mat-icon-button color="primary" matTooltip="Hapus Spanduk" (click)="deleteSpanduk(row.id)"
-                [ngStyle]="{'cursor': !permission?.hapus ? 'no-drop' : ''}" [disabled]="!permission?.hapus">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </div>
-          </ng-template>
-        </ngx-datatable-column>
       </ngx-datatable>
     </div>
   </div>
+
 </div>
