--- a/src/app/pages/dte/template/edit/template-edit.component.scss
+++ b/src/app/pages/dte/template/edit/template-edit.component.scss
@@ -30,6 +30,79 @@
     flex-direction: column;
     margin: 15px 0;
   }
+  .well {
+    min-height: 20px;
+    padding: 19px;
+    // margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    cursor: pointer;
+  }
+  .mat-chip {
+    position: relative;
+    overflow: hidden;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    transform: translateZ(0);
+  }
+  .mat-chip.mat-standard-chip {
+  background-color: #e0e0e0;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.mat-chip-list-wrapper .mat-standard-chip,
+.mat-chip-list-wrapper input.mat-input-element {
+  margin: 4px;
+}
+
+.mat-standard-chip.mat-chip-with-trailing-icon {
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 8px;
+  padding-left: 12px;
+}
+
+.mat-chip.mat-standard-chip .mat-chip-remove {
+  color: rgba(0, 0, 0, 0.87);
+  opacity: 0.4;
+  padding-top: 3px;
+  padding-left: 5px;
+}
+
+.mat-standard-chip .mat-chip-remove.mat-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.mat-chip .mat-chip-remove.mat-icon,
+.mat-chip .mat-chip-trailing-icon.mat-icon {
+  font-size: 18px;
+}
+
+.mat-standard-chip .mat-chip-remove,
+.mat-standard-chip .mat-chip-trailing-icon {
+  margin-left: 8px;
+  margin-right: 0;
+}
+
+.mat-standard-chip .mat-chip-remove,
+.mat-standard-chip .mat-chip-trailing-icon {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+.preview-image-content {
+  &:hover {
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
+  .my-drop-zone {
+    border: dotted 3px lightgray;
+  }
   
   .example-radio-button {
     margin: 5px;
