--- a/src/app/pages/src-catalogue/vendor-setting/vendor-setting.component.html
+++ b/src/app/pages/src-catalogue/vendor-setting/vendor-setting.component.html
@@ -25,56 +25,47 @@
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn days-left active' : 'days-btn days-left'"
                             [matTooltip]="Senin" id="Senin-{{i}}" (click)="addDayToSchedule(i,j)"
-                            *ngIf="day.day_id == 1 && j == 0"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            *ngIf="day.day_id == 1 && j == 0">
                             <span>SEN</span>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn active' : 'days-btn'" [matTooltip]="Selasa"
-                            id="Selasa-{{i}}" (click)="addDayToSchedule(i,j)" *ngIf="day.day_id == 2 && j == 1"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            id="Selasa-{{i}}" (click)="addDayToSchedule(i,j)" *ngIf="day.day_id == 2 && j == 1">
                             <span>SEL</span>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn active' : 'days-btn'" [matTooltip]="Rabu" id="Rabu-{{i}}"
-                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 3 && j == 2"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 3 && j == 2">
                             <span>RAB</span>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn active' : 'days-btn'" [matTooltip]="Kamis" id="Kamis-{{i}}"
-                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 4 && j == 3"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 4 && j == 3">
                             <span>KAM</span>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn active' : 'days-btn'" [matTooltip]="Jumat" id="Jumat-{{i}}"
-                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 5 && j == 4"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 5 && j == 4">
                             <span>JUM</span>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn active' : 'days-btn'" [matTooltip]="Sabtu" id="Sabtu-{{i}}"
-                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 6 && j == 5"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            (click)="addDayToSchedule(i, j)" *ngIf="day.day_id == 6 && j == 5">
                             <span>SAB</span>
                           </div>
                           <div fxLayout="row" fxLayoutAlign="center center"
                             [class]="day.isActive? 'days-btn days-right active' : 'days-btn days-right'"
                             matTooltip="Minggu" id="Minggu-{{i}}" (click)="addDayToSchedule(i, j)"
-                            *ngIf="day.day_id == 0 && j == 6"
-                            [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                            *ngIf="day.day_id == 0 && j == 6">
                             <span>MIN</span>
                           </div>
                         </div>
                       </div>
                       <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px">
-                        <div fxLayout="column" fxLayoutAlign="center center" class="open-time"
-                          [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                        <div fxLayout="column" fxLayoutAlign="center center" class="open-time">
                           <span>Jam Buka</span>
-                          <span class="ot-time" *ngIf="!permissionOperasionalToko?.ubah"
-                            (click)="timeIsClick()">{{item.value.openTime || '00:00'}}</span>
-                          <div class="24hr-example" *ngIf="permissionOperasionalToko?.ubah">
+                          <!-- <span class="ot-time" (click)="timeIsClick()">{{item.value.openTime || '00:00'}}</span> -->
+                          <div class="24hr-example">
                             <input placeholder="00:00" [value]="item.value.openTime" aria-label="24hr format"
                               [ngxTimepicker]="fullTime1" [format]="24" class="timepicker-input"
                               formControlName="openTime" (change)="openTimeChanged($event, i)"
@@ -82,12 +73,10 @@
                             <ngx-material-timepicker #fullTime1></ngx-material-timepicker>
                           </div>
                         </div>
-                        <div fxLayout="column" fxLayoutAlign="center center" class="close-time"
-                          [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}">
+                        <div fxLayout="column" fxLayoutAlign="center center" class="close-time">
                           <span>Jam Tutup</span>
-                          <span class="ot-time" *ngIf="!permissionOperasionalToko?.ubah"
-                            (click)="timeIsClick()">{{item.value.closedTime || '00:00'}}</span>
-                          <div class="24hr-example" *ngIf="permissionOperasionalToko?.ubah">
+                          <!-- <span class="ot-time" (click)="timeIsClick()">{{item.value.closedTime || '00:00'}}</span> -->
+                          <div class="24hr-example">
                             <input placeholder="00:00" [value]="item.value.closedTime" aria-label="24hr format"
                               [ngxTimepicker]="fullTime2" [format]="24" class="timepicker-input"
                               formControlName="closedTime" [min]="item.value.openTime" readonly>
@@ -96,9 +85,7 @@
                         </div>
                       </div>
                       <div>
-                        <button mat-icon-button color="primary" matTooltip="Hapus" (click)="deleteSchedule(item, i)"
-                          [ngStyle]="{'cursor': !permissionOperasionalToko?.ubah ? 'no-drop' : ''}"
-                          [disabled]="!permissionOperasionalToko?.ubah">
+                        <button mat-icon-button color="primary" matTooltip="Hapus" (click)="deleteSchedule(item, i)">
                           <mat-icon>delete</mat-icon>
                         </button>
                       </div>
@@ -109,8 +96,7 @@
                 </form>
                 <div *ngIf="listSchedule.length == 0" style="font-size: 11px; color:rgb(190, 5, 5)">Tidak ada Waktu
                   Operasional yang dapat ditampilkan.</div>
-                <div fxLayout="row" fxLayoutAlign="start start" fxFlex="100" class="ml-16"
-                  *ngIf="permissionOperasionalToko?.ubah">
+                <div fxLayout="row" fxLayoutAlign="start start" fxFlex="100" class="ml-16">
                   <div class="add-schedule" fxLayout="row" fxLayoutAlign="center center" (click)="addSchedule()">
                     <mat-icon matIcon>add</mat-icon><span> Tambah Jadwal</span>
                   </div>
