--- a/src/app/pages/user-management/pengajuan-src/index/pengajuan-src.component.html
+++ b/src/app/pages/user-management/pengajuan-src/index/pengajuan-src.component.html
@@ -89,12 +89,39 @@
             <div class="name-container">
               <span
                 [ngStyle]="{ 'background-color': renderStatusName(row.status).bgColor, 'color': renderStatusName(row.status).textColor }"
-                style="min-width: 100px !important;min-height: 20px;font-size: .9em;text-align: center;padding: 5px 15px; border-radius: 10px;">{{row.status ? renderStatusName(row.status).name : ''}}</span>
+                style="min-width: 100px !important;min-height: 20px;font-size: .9em;text-align: center;padding: 5px 15px; border-radius: 10px;">{{row.status
+                ? renderStatusName(row.status).name : ''}}</span>
               <!-- <p class="status text-truncate h6 p-4"
                 style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px;">
                 {{row.status ? row.status.toUpperCase() : '-'}}
               </p> -->
             </div>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="S&K" prop="is_syarat_ketentuan" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+            style="justify-content: center !important">
+            <div class="name-container pl-8">
+              <mat-icon *ngIf="row.is_syarat_ketentuan" class="active-icon mat-green-600-bg s-18">check</mat-icon>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="PP" prop="is_pemberitahuan_privasi" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+            style="justify-content: center !important">
+            <div class="name-container pl-8">
+              <mat-icon *ngIf="row.is_pemberitahuan_privasi" class="active-icon mat-green-600-bg s-18">check</mat-icon>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Channel" prop="channel" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span
+              style="min-width: 100px !important;min-height: 20px;font-size: .9em;text-align: center;padding: 5px 15px; border-radius: 10px;background-color: red;color: white;">
+              {{ row.channel ? row.channel.toUpperCase() : row.channel }}</span>
           </ng-template>
         </ngx-datatable-column>
 
